2002-06-14  Darin Adler  <darin@apple.com>

	* Panels.subproj/IFStandardPanels.m:
	(-[IFStandardPanelsPrivate frontmostWindowLoadingURL:]): Change to call webView
	instead of view. Not sure why anyone was able to compile this.

	* Plugins.subproj/IFNullPluginView.mm: Remove include of obsolete WCPluginWidget.h.

	* WebView.subproj/IFHTMLRepresentation.mm: (-[IFHTMLRepresentation part]):
	Call part instead of KHTMLPart. Not sure why anyone was able to compile this.

2002-06-14  Darin Adler  <darin@apple.com>

	Add the new bridge class that connects us to WebCore in a nicer way.
	Started to use it for some things. More to come.

	* WebKit.pbproj/project.pbxproj:
	* IFWebCoreBridge.h: Added.
	* IFWebCoreBridge.mm: Added.

	* Misc.subproj/IFDownloadHandler.mm:
	(-[IFDownloadHandler initWithDataSource:]): Call [super init].
	(-[IFDownloadHandler dealloc]): Call [super dealloc].
	* Plugins.subproj/IFPluginNullEventSender.m:
	(-[IFPluginNullEventSender initializeWithNPP:functionPointer:window:]): Call [super init].
	(-[IFPluginNullEventSender dealloc]): Call [super dealloc].
	* WebView.subproj/IFDOMNode.mm: (-[IFDOMNode dealloc]): Call [super dealloc].
	* WebView.subproj/IFImageView.m: (-[IFImageView dealloc]): Call [super dealloc].
	* WebView.subproj/IFRenderNode.mm: (-[IFRenderNode dealloc]): Call [super dealloc].

	* WebView.subproj/IFHTMLRepresentation.h: Moved variables into a private structure so
	this class can be made public.
	* WebView.subproj/IFHTMLRepresentationPrivate.h: Added. Has _bridge method.
	* WebView.subproj/IFHTMLRepresentation.mm:
	(-[IFHTMLRepresentation init]): Call [super init]. Also use the new private structure,
	and allocate the IFWebCoreBridge.
	(-[IFHTMLRepresentation dealloc]): Release the private structure and the IFWebCoreBridge.
	Also, call [super dealloc].
	(-[IFHTMLRepresentation _bridge]): Private method to get to the bridge.
	(-[IFHTMLRepresentation receivedData:withDataSource:]): Use IFWebCoreBridge.
